--- a/app/taxi-local.html
+++ b/app/taxi-local.html
@@ -23,17 +23,21 @@
             <!-- Ссылки(ПК) -->
             <ul class="links list-unstyled d-flex">
                 <li><a href="#" class="text-dark p-2 p-xl-3 fs18">Главная</a></li>
-                <li><a href="#" class="text-dark p-2 p-xl-3 fs18">Услуги</a></li>
+                <li class="links-topmenu position-relative">
+                    <a href="#" class="text-dark p-2 p-xl-3 fs18">Услуги</a>
+                    <ul class="links-submenu list-unstyled mt-3 d-none position-absolute bg-white border p-3">
+                        <li><a href="#">Такси для гостей города</a></li>
+                        <li><a href="#">Такси области и РФ</a></li>
+                        <li><a href="#">Такси для нижегородцев</a></li>
+                        <li><a href="#">Трезвый водитель</a></li>
+                    </ul>
+                </li>
                 <li><a href="#" class="text-dark p-2 p-xl-3 fs18">Контакты</a></li>
             </ul>
             <!-- Телефон -->
-            <div class="phone d-inline">
-                <div class="header-phone d-flex justify-content-end align-items-center">
-                    <img src="img/dest/phone-icon.png" alt="" class="mx-1"> <a href="#" class="text-orange fs24 font-weight-bold">413-76-37</a>
-                </div>
-                <div class="header-city p-0 m-0">
-                    <span class="text-dark fs18">по Новгороду и области</span>
-                </div>
+            <div class="phone d-flex flex-column align-items-end lh1">
+                <a href="tel:413-76-37" class="text-orange fs24 font-weight-bold d-flex align-items-center"><img src="img/phone-icon.svg" alt="" class="mx-1">413-76-37</a>
+                <p class="mb-0 fs18">по Новгороду и области</p>
             </div>
         </div>
     </header>
@@ -43,22 +47,20 @@
         <div class="container">
             <div class="gt-title">
                 <h2 class="text-white fs36 font-weight-bold">Такси <span class="text-orange">для нижегородцев</span></h2>
-                <h3 class="text-white fs16 font-weight-normal mt-2">Наша ключевая деятельность - перевозка пассажиров. <br> Заказывая такси у нас, Вы можете рассчитывать на высокий уровень сервиса!</h3>
+                <p class="text-white fs16 font-weight-normal mt-2 lh1">Наша ключевая деятельность - перевозка пассажиров.
+                    <br> Заказывая такси у нас, Вы можете рассчитывать на высокий уровень сервиса!</p>
             </div>
             <div class="gt-rate mt-5">
                 <div class="gt-rate-block d-flex justify-content-center align-items-center">
                     <div class="gt-rate-tabs">
                         <div class="rate-tabs bg-white">
                             <h3 class="rate-title text-dark text-center fs24 pt-4">Эконом</h3>
-                            <h3 class="rate-subtitle text-dark text-center fs18 font-weight-normal mt-2">Автомобили Эконом класса</h3>
-                            <div class="rate-small-price">
-                                <h3 class="text-dark text-center fs18 pt-5 font-weight-normal">50р посадка</h3>
-                                <h3 class="text-dark text-center fs18 my-2 font-weight-normal">45р километр</h3>
-                                <h3 class="text-dark text-center fs18 my-2  pb-3 font-weight-normal">25р минута пути</h3>
-                            </div>
-                            <div class="rate-title-price">
-                                <h3 class="text-dark text-center fs36 mt-4"> от 50Р </h3>
-                            </div>
+                            <p class="rate-subtitle text-dark text-center fs18 font-weight-normal mt-2 pb-2">Автомобили Эконом класса</p>
+                            <p class="text-dark text-center fs18 mb-0 mt-4">50р посадка</p>
+                            <p class="text-dark text-center fs18 mb-0">45р километр</p>
+                            <p class="text-dark text-center fs18 mb-4">25р минута пути</p>
+                            <hr class="mx-2">
+                            <p class="text-dark text-center fs36 font-weight-bold"> от 50Р </p>
                         </div>
                         <div class="rate-button">
                             <button class="btn btn-orange">Заказать</button>
@@ -67,15 +69,12 @@
                     <div class="gt-rate-tabs">
                         <div class="rate-tabs bg-white">
                             <h3 class="rate-title text-dark text-center fs24 pt-4">Комфорт</h3>
-                            <h3 class="rate-subtitle text-dark text-center fs18 font-weight-normal mt-2">Автомобили Комфорт класса</h3>
-                            <div class="rate-small-price">
-                                <h3 class="text-dark text-center fs18 pt-5 font-weight-normal">89р посадка</h3>
-                                <h3 class="text-dark text-center fs18 my-2 font-weight-normal">60р километр</h3>
-                                <h3 class="text-dark text-center fs18 my-2  pb-3 font-weight-normal">40р минута пути</h3>
-                            </div>
-                            <div class="rate-title-price">
-                                <h3 class="text-dark text-center fs36 mt-4"> от 89Р </h3>
-                            </div>
+                            <p class="rate-subtitle text-dark text-center fs18 font-weight-normal mt-2 pb-2">Автомобили Комфорт класса</p>
+                            <p class="text-dark text-center fs18 mb-0 mt-4">89р посадка</p>
+                            <p class="text-dark text-center fs18 mb-0">60р километр</p>
+                            <p class="text-dark text-center fs18 mb-4">40р минута пути</p>
+                            <hr class="mx-2">
+                            <p class="text-dark text-center fs36 font-weight-bold"> от 89Р </p>
                         </div>
                         <div class="rate-button">
                             <button class="btn btn-orange">Заказать</button>
@@ -84,26 +83,24 @@
                     <div class="gt-rate-tabs">
                         <div class="rate-tabs bg-white">
                             <h3 class="rate-title text-dark text-center fs24 pt-4">Бизнес</h3>
-                            <h3 class="rate-subtitle text-dark text-center fs18 font-weight-normal mt-2">Автомобили Бизнес класса</h3>
-                            <div class="rate-small-price">
-                                <h3 class="text-dark text-center fs18 pt-5 font-weight-normal">199р посадка</h3>
-                                <h3 class="text-dark text-center fs18 my-2 font-weight-normal">70р километр</h3>
-                                <h3 class="text-dark text-center fs18 my-2  pb-3 font-weight-normal">50р минута пути</h3>
-                            </div>
-                            <div class="rate-title-price">
-                                <h3 class="text-dark text-center fs36 mt-4"> от 199Р </h3>
-                            </div>
+                            <p class="rate-subtitle text-dark text-center fs18 font-weight-normal mt-2 pb-2">Автомобили Бизнес класса</p>
+                            <p class="text-dark text-center fs18 mb-0 mt-4">199р посадка</p>
+                            <p class="text-dark text-center fs18 mb-0">70р километр</p>
+                            <p class="text-dark text-center fs18 mb-4">50р минута пути</p>
+                            <hr class="mx-2">
+                            <p class="text-dark text-center fs36 font-weight-bold"> от 199Р </p>
                         </div>
                         <div class="rate-button">
                             <button class="btn btn-orange">Заказать</button>
                         </div>
                     </div>
+
                 </div>
             </div>
             <div class="gt-rate-info d-flex justify-content-between align-items-center mt-5">
                 <div class="gt-rate-text">
-                    <h3 class="text-white fs16 font-weight-normal">Равным образом сложившаяся структура организации способствует подготовки и реализации модели развития. Товарищи! дальнейшее развитие различных форм деятельности позволяет оценить значение новых предложений. Задача организации, в особенности же начало повседневной работы по формированию позиции способствует подготовки и реализации новых предложений.</h3>
-                    <h3 class="text-white fs16 font-weight-normal mt-3">Равным образом сложившаяся структура организации способствует подготовки и реализации модели развития. Товарищи! дальнейшее развитие различных форм деятельности позволяет оценить значение новых предложений. Задача организации, в особенности же начало повседневной работы по формированию позиции способствует подготовки и реализации новых предложений.</h3>
+                    <p class="text-white fs16 font-weight-normal lh1 mr-2 mt-2">Равным образом сложившаяся структура организации способствует подготовки и реализации модели развития. Товарищи! дальнейшее развитие различных форм деятельности позволяет оценить значение новых предложений. Задача организации, в особенности же начало повседневной работы по формированию позиции способствует подготовки и реализации новых предложений.</p>
+                    <p class="text-white fs16 font-weight-normal lh1 mr-2 ">Равным образом сложившаяся структура организации способствует подготовки и реализации модели развития. Товарищи! дальнейшее развитие различных форм деятельности позволяет оценить значение новых предложений. Задача организации, в особенности же начало повседневной работы по формированию позиции способствует подготовки и реализации новых предложений.</p>
                 </div>
                 <div class="gt-rate-img ml-2">
                     <img src="img/dest/guest-taxi-img.png" alt="">
@@ -165,9 +162,9 @@
                     </ul>
                 </div>
                 <div class="footer-social mt-3">
-                    <img src="img/dest/footer-icon-vk.png" alt="">
-                    <img src="img/dest/footer-icon-inst.png" alt="">
-                    <img src="img/dest/footer-icon-fb.png" alt="">
+                    <img src="img/vk-footer-icon.svg" alt="">
+                    <img src="img/inst-footer-icon.svg" alt="">
+                    <img src="img/fb-footer-icon.svg" alt="">
                 </div>
             </div>
             <div class="footer-copyright d-flex justify-content-between align-items-center">
