--- a/app/contacts.html
+++ b/app/contacts.html
@@ -23,17 +23,21 @@
             <!-- Ссылки(ПК) -->
             <ul class="links list-unstyled d-flex">
                 <li><a href="#" class="text-dark p-2 p-xl-3 fs18">Главная</a></li>
-                <li><a href="#" class="text-dark p-2 p-xl-3 fs18">Услуги</a></li>
+                <li class="links-topmenu position-relative">
+                    <a href="#" class="text-dark p-2 p-xl-3 fs18">Услуги</a>
+                    <ul class="links-submenu list-unstyled mt-3 d-none position-absolute bg-white border p-3">
+                        <li><a href="#">Такси для гостей города</a></li>
+                        <li><a href="#">Такси области и РФ</a></li>
+                        <li><a href="#">Такси для нижегородцев</a></li>
+                        <li><a href="#">Трезвый водитель</a></li>
+                    </ul>
+                </li>
                 <li><a href="#" class="text-dark p-2 p-xl-3 fs18">Контакты</a></li>
             </ul>
             <!-- Телефон -->
-            <div class="phone d-inline">
-                <div class="header-phone d-flex justify-content-end align-items-center">
-                    <img src="img/dest/phone-icon.png" alt="" class="mx-1"> <a href="#" class="text-orange fs24 font-weight-bold">413-76-37</a>
-                </div>
-                <div class="header-city p-0 m-0">
-                    <span class="text-dark fs18">по Новгороду и области</span>
-                </div>
+            <div class="phone d-flex flex-column align-items-end lh1">
+                <a href="tel:413-76-37" class="text-orange fs24 font-weight-bold d-flex align-items-center"><img src="img/phone-icon.svg" alt="" class="mx-1">413-76-37</a>
+                <p class="mb-0 fs18">по Новгороду и области</p>
             </div>
         </div>
     </header>
@@ -113,9 +117,9 @@
                     </ul>
                 </div>
                 <div class="footer-social mt-3">
-                    <img src="img/dest/footer-icon-vk.png" alt="">
-                    <img src="img/dest/footer-icon-inst.png" alt="">
-                    <img src="img/dest/footer-icon-fb.png" alt="">
+                    <img src="img/vk-footer-icon.svg" alt="">
+                    <img src="img/inst-footer-icon.svg" alt="">
+                    <img src="img/fb-footer-icon.svg" alt="">
                 </div>
             </div>
             <div class="footer-copyright d-flex justify-content-between align-items-center">
