--- a/app/services.html
+++ b/app/services.html
@@ -23,17 +23,21 @@
             <!-- Ссылки(ПК) -->
             <ul class="links list-unstyled d-flex">
                 <li><a href="#" class="text-dark p-2 p-xl-3 fs18">Главная</a></li>
-                <li><a href="#" class="text-dark p-2 p-xl-3 fs18">Услуги</a></li>
+                <li class="links-topmenu position-relative">
+                    <a href="#" class="text-dark p-2 p-xl-3 fs18">Услуги</a>
+                    <ul class="links-submenu list-unstyled mt-3 d-none position-absolute bg-white border p-3">
+                        <li><a href="#">Такси для гостей города</a></li>
+                        <li><a href="#">Такси области и РФ</a></li>
+                        <li><a href="#">Такси для нижегородцев</a></li>
+                        <li><a href="#">Трезвый водитель</a></li>
+                    </ul>
+                </li>
                 <li><a href="#" class="text-dark p-2 p-xl-3 fs18">Контакты</a></li>
             </ul>
             <!-- Телефон -->
-            <div class="phone d-inline">
-                <div class="header-phone d-flex justify-content-end align-items-center">
-                    <img src="img/dest/phone-icon.png" alt="" class="mx-1"> <a href="#" class="text-orange fs24 font-weight-bold">413-76-37</a>
-                </div>
-                <div class="header-city p-0 m-0">
-                    <span class="text-dark fs18">по Новгороду и области</span>
-                </div>
+            <div class="phone d-flex flex-column align-items-end lh1">
+                <a href="tel:413-76-37" class="text-orange fs24 font-weight-bold d-flex align-items-center"><img src="img/phone-icon.svg" alt="" class="mx-1">413-76-37</a>
+                <p class="mb-0 fs18">по Новгороду и области</p>
             </div>
         </div>
     </header>
@@ -44,27 +48,35 @@
             <div class="uslugi-title">
                 <h2 class="text-dark fs48 font-weight-bold ">Наши<span class="text-orange fs48"> услуги</span></h2>
             </div>
-            <div class="tabs d-flex justify-content-center align-items-center">
-                <div class="mx-1">
-                    <div class="uslugi-tabs-1 text-center my-2">
-                        <p class="tabs-title text-white fs36">Такси для гостей города</p>
-                        <p class="tabs-text text-white fs18 font-weight-normal">Таким образом рамки и место обучения кадров способствует подготовки и реализации позиций, занимаемых участниками в отношении поставленных задач.</p>
+            <div class="row mt-4">
+                <article class="col-lg-6">
+                    <div class="uslugi-item bg-light py-5 px-4 text-center" style="background-image: url('/img/dest/uslugi-tabs-guest.png')">
+                        <h1 class="tabs-title text-white fs36">Такси для гостей города</h1>
+                        <hr class="border-white my-4">
+                        <p class="tabs-text text-white fs18 font-weight-normal mb-0">Таким образом рамки и место обучения кадров способствует подготовки и реализации позиций, занимаемых участниками в отношении поставленных задач.</p>
                     </div>
-                    <div class="uslugi-tabs-2 text-center my-2">
-                        <p class="tabs-title text-white fs36">Такси для нижегородцев</p>
-                        <p class="tabs-text text-white fs18 font-weight-normal">Таким образом рамки и место обучения кадров способствует подготовки и реализации позиций, занимаемых участниками в отношении поставленных задач.</p>
+                </article>
+                <article class="col-lg-6">
+                    <div class="uslugi-item bg-light py-5 px-4 text-center" style="background-image: url('/img/dest/uslugi-tabs-nn.png')">
+                        <h1 class="tabs-title text-white fs36">Такси для новгородцев</h1>
+                        <hr class="border-white my-4">
+                        <p class="tabs-text text-white fs18 font-weight-normal mb-0">Таким образом рамки и место обучения кадров способствует подготовки и реализации позиций, занимаемых участниками в отношении поставленных задач.</p>
                     </div>
-                </div>
-                <div class="mx-1">
-                    <div class="uslugi-tabs-3 text-center my-2">
-                        <p class="tabs-title text-white fs36 ">Такси по области и РФ</p>
-                        <p class="tabs-text text-white fs18 font-weight-normal">Таким образом рамки и место обучения кадров способствует подготовки и реализации позиций, занимаемых участниками в отношении поставленных задач.</p>
+                </article>
+                <article class="col-lg-6 mt-4">
+                    <div class="uslugi-item bg-light py-5 px-4 text-center" style="background-image: url('/img/dest/uslugi-tabs-rus.png')">
+                        <h1 class="tabs-title text-white fs36">Такси по области и РФ</h1>
+                        <hr class="border-white my-4">
+                        <p class="tabs-text text-white fs18 font-weight-normal mb-0">Таким образом рамки и место обучения кадров способствует подготовки и реализации позиций, занимаемых участниками в отношении поставленных задач.</p>
                     </div>
-                    <div class="uslugi-tabs-4 text-center my-2">
-                        <h3 class="tabs-title text-white fs36">Услуга "трезвый водитель"</h3>
-                        <h3 class="tabs-text text-white fs18 font-weight-normal">Таким образом рамки и место обучения кадров способствует подготовки и реализации позиций, занимаемых участниками в отношении поставленных задач.</h3>
+                </article>
+                <article class="col-lg-6 mt-4">
+                    <div class="uslugi-item bg-light py-5 px-4 text-center" style="background-image: url('/img/dest/uslugi-tabs-sober.png')">
+                        <h1 class="tabs-title text-white fs36">Услуга "трезвый водитель"</h1>
+                        <hr class="border-white my-4">
+                        <p class="tabs-text text-white fs18 font-weight-normal mb-0">Таким образом рамки и место обучения кадров способствует подготовки и реализации позиций, занимаемых участниками в отношении поставленных задач.</p>
                     </div>
-                </div>
+                </article>
             </div>
         </div>
     </section>
@@ -125,9 +137,9 @@
                     </ul>
                 </div>
                 <div class="footer-social mt-3">
-                    <img src="img/dest/footer-icon-vk.png" alt="">
-                    <img src="img/dest/footer-icon-inst.png" alt="">
-                    <img src="img/dest/footer-icon-fb.png" alt="">
+                    <img src="img/vk-footer-icon.svg" alt="">
+                    <img src="img/inst-footer-icon.svg" alt="">
+                    <img src="img/fb-footer-icon.svg" alt="">
                 </div>
             </div>
             <div class="footer-copyright d-flex justify-content-between align-items-center">
