--- a/app/contacts.html
+++ b/app/contacts.html
@@ -47,17 +47,17 @@
             <div class="contacts-content d-flex ">
                 <div class="contacts-left">
                     <div class="cont-email">
-                        <div class="cont-email-element d-flex  px-5 pt-5 pb-4">
+                        <div class="cont-email-element d-flex align-items-center  px-5 pt-5 pb-4">
                             <div class="cont-img mr-3 d-flex align-items-center">
-                                <img src="./img/dest/phone-white.png" alt="" class="mx-auto">
+                                <img src="./img/phone-icon-white.svg" alt="" class="mx-auto">
                             </div>
                             <div>
                                 <a href="" class="text-dark fs18 font-weight-normal">Телефон: <span class="fs18 font-weight-bold">+7(911) 123-45-67</span></a>
                             </div>
                         </div>
-                        <div class="cont-email-element d-flex px-5">
-                            <div class="cont-img mr-3  d-flex align-items-center">
-                                <img src="./img/dest/email-icon-white.png" alt="" class="mx-auto">
+                        <div class="cont-email-element d-flex px-5 align-items-center">
+                            <div class="cont-img mr-3 d-flex align-items-center">
+                                <img src="./img/email-white-icon.svg" alt="" class="mx-auto">
                             </div>
                             <div>
                                 <a href="#" class="text-dark fs18 font-weight-normal">E-mail: <span class="fs18 font-weight-bold">taxopark@mail.ru</span></a>
