--- a/app/sober-driver.html
+++ b/app/sober-driver.html
@@ -53,9 +53,9 @@
             <div class="sober-content d-flex justify-content-between">
                 <div class="sober-left">
                     <div class="gt-rate">
-                        <div class="gt-rate-block d-flex justify-content-center align-items-center">
+                        <div class="gt-rate-block d-flex justify-content-start align-items-center">
                             <div class="gt-rate-tabs">
-                                <div class="rate-tabs bg-white">
+                                <div class="rate-tabs bg-white m-0">
                                     <h3 class="rate-title text-dark text-center fs24 pt-4">Трезвый водитель</h3>
                                     <p class="rate-subtitle text-dark text-center fs18 font-weight-normal mt-2 pb-2">Заберем из любой точки</p>
                                     <p class="text-dark text-center fs18 mb-0 mt-4">500р посадка</p>
