--- a/app/taxi-area.html
+++ b/app/taxi-area.html
@@ -102,7 +102,7 @@
                     <p class="text-white fs16 font-weight-normal lh1 mr-2">Равным образом сложившаяся структура организации способствует подготовки и реализации модели развития. Товарищи! дальнейшее развитие различных форм деятельности позволяет оценить значение новых предложений. Задача организации, в особенности же начало повседневной работы по формированию позиции способствует подготовки и реализации новых предложений.</p>
                 </div>
                 <div class="gt-rate-img ml-2">
-                    <img src="img/dest/taxi-area-img.png" alt="">
+                    <img src="img/dest/guest-taxi-img.png" alt="">
                 </div>
             </div>
         </div>
